专辑旋转，（有点手机不出效果），淡入淡出，进度条改变播放时间

--- a/platforms/android/assets/www/music.html
+++ b/platforms/android/assets/www/music.html
@@ -64,7 +64,7 @@
             <footer class="m_footer">
                 <div class="p_icon"><img src="img/logo.jpg" alt=""></div>
                 <div class="play-status">
-                    <progress max="100" value="0"></progress>
+                    <progress max="100" value="0"></progress><time class="time">-0:00</time>
                     <div class="p_paly">
                         <h3 class="title"><span>好音乐</span><div>近在这里</div></h3>
                         <div class="p_btn">
